# jupyter-sphinx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test.ipynb  tox.ini
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: artifacts.yml  prerelease.yml  publish.yml  tests.yml
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/_static/: custom.css
docs/: conf.py  index.rst  options.rst  setup.rst  thebelab.rst
docs/_static/: custom.css
jupyter_sphinx/: __init__.py  _version.py  ast.py  embed_widgets.py  execute.py  thebelab.py  utils.py
jupyter_sphinx/css/: jupyter-sphinx.css
jupyter_sphinx/thebelab/: thebelab-helper.js  thebelab-latest.js  thebelab.css
tests/: conftest.py  test_execute.py
tests/test_execute/: test_bash_kernel.sh  test_builder_priority_html.html  test_builder_priority_latex.tex  test_cell_output_to_nodes.html  test_code_below.html  test_continue_linenos_not_automatic.html  test_continue_linenos_with_start.html  test_continue_lineos_conf_option.html  test_emphasize_lines.html  test_emphasize_lines_with_dash.html  test_execution_environment_carries_over.html  test_hide_code.html  test_hide_output.html  test_input_cell.html  test_input_cell_linenos.html  test_javascript.html  test_jupyter_download_notebook_.html  test_kernel_restart.html  test_latex.html  test_linenos_code_below.html  test_linenos_conf_option.html  test_multiple_directives_types.html  test_output_cell.html  test_raises_specific_error_incell.html  test_save_script.py  test_stderr.html  test_stderr_hidden.html  test_stdout.html  test_thebe_button_manual.html  test_thebe_code_below.html  test_thebe_hide_code.html  test_thebe_hide_output.html  test_widgets.html
